[gd_scene load_steps=5 format=2]

[ext_resource path="res://SharedAssets/PixelFontNormal.tres" type="DynamicFont" id=1]
[ext_resource path="res://Levels/LevelFinishedUI.gd" type="Script" id=2]
[ext_resource path="res://Levels/VictorySmall.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "show_ui"
tracks/0/type = "value"
tracks/0/path = NodePath("Window:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -128 ), Vector2( 0, 76 ) ]
}

[node name="LevelFinishedUI" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Window" type="Node2D" parent="."]
position = Vector2( 0, -128 )

[node name="Bg" type="ColorRect" parent="Window"]
margin_left = 32.0
margin_right = 288.0
margin_bottom = 104.0
color = Color( 0.811765, 0.776471, 0.721569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg2" type="ColorRect" parent="Window"]
margin_left = 36.0
margin_top = 4.0
margin_right = 284.0
margin_bottom = 100.0
color = Color( 0.478431, 0.266667, 0.290196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Window"]
margin_top = 34.0
margin_right = 320.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "LEVEL COMPLETE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="Label" parent="Window"]
margin_top = 65.0
margin_right = 320.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 1 )
text = "PRESS ANY KEY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_ui = SubResource( 1 )

[node name="InputDelayTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="StartDelay" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -4.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="InputDelayTimer" to="." method="_on_InputDelayTimer_timeout"]
[connection signal="timeout" from="StartDelay" to="." method="_on_StartDelay_timeout"]
